home page + login

--- a/main.html
+++ b/main.html
@@ -7,14 +7,13 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <header>
         <nav class = "navbar">
-            <a class = "logo" href="https://www.bodin.ac.th/home/"><img src="cropped-bodinlogo.png" alt="logo"></a>
+            <a href="https://www.bodin.ac.th/home/"><img class="logo" src="cropped-bodinlogo.png" alt="logo"></a>
             <a href="main.html">Home</a>
             <a href="report.html">Report problem</a>
             <a href="look.html">See problem</a>
             <a href="contact.html">Contact</a>
-        </nav>
-    </header>
+            <!-- <a href="log-in.html">Log in</a> -->
+        </nav>        
 </body>
 </html>
